--- a/templates/nova.conf.j2
+++ b/templates/nova.conf.j2
@@ -113,7 +113,7 @@ project_name = {{ identity.project_name }}
 username = {{ identity.username }}
 password = {{ identity.password }}
 
-+{% if telemetry.enable -%}
-+[oslo_messaging_notifications]
-+driver = messagingv2
-+{%- endif %}
+{% if telemetry.enable -%}
+[oslo_messaging_notifications]
+driver = messagingv2
+{%- endif %}
