--- a/templates/nova.conf.j2
+++ b/templates/nova.conf.j2
@@ -117,3 +117,6 @@ password = {{ identity.password }}
 [oslo_messaging_notifications]
 driver = messagingv2
 {%- endif %}
+
+[oslo_messaging_rabbit]
+rabbit_quorum_queue = True
