--- a/templates/libvirtd.conf.j2
+++ b/templates/libvirtd.conf.j2
@@ -55,7 +55,7 @@ tcp_port = "16509"
 #listen_addr = "192.168.0.1"
 
 
-# Flag toggling mDNS advertizement of the libvirt service.
+# Flag toggling mDNS advertisement of the libvirt service.
 #
 # Alternatively can disable for all services on a host by
 # stopping the Avahi daemon
@@ -63,7 +63,7 @@ tcp_port = "16509"
 # This is disabled by default, uncomment this to enable it
 #mdns_adv = 1
 
-# Override the default mDNS advertizement name. This must be
+# Override the default mDNS advertisement name. This must be
 # unique on the immediate broadcast network.
 #
 # The default is "Virtualization Host HOSTNAME", where HOSTNAME
