--- a/templates/neutron.conf.j2
+++ b/templates/neutron.conf.j2
@@ -63,3 +63,6 @@ region_name = {{ identity.region_name }}
 project_name = {{ identity.project_name }}
 username = {{ identity.username }}
 password = {{ identity.password }}
+
+[oslo_messaging_rabbit]
+rabbit_quorum_queue = True
