--- a/templates/nova.conf.j2
+++ b/templates/nova.conf.j2
@@ -58,6 +58,9 @@ ovsdb_connection = unix:{{ snap_common }}/run/openvswitch/db.sock
 service_type = volume
 service_name = cinder
 region_name = {{ identity.region_name }}
+{% if ca and ca.bundle -%}
+cafile = {{ snap_common }}/etc/ssl/certs/receive-ca-bundle.pem
+{% endif -%}
 
 [spice]
 enabled = True
@@ -71,6 +74,9 @@ keymap = en-us
 service_type = image
 service_name = glance
 region_name = {{ identity.region_name }}
+{% if ca and ca.bundle -%}
+cafile = {{ snap_common }}/etc/ssl/certs/receive-ca-bundle.pem
+{% endif -%}
 
 [keystone_authtoken]
 auth_url = {{ identity.auth_url }}
@@ -80,6 +86,9 @@ user_domain_name = {{ identity.user_domain_name }}
 project_name = {{ identity.project_name }}
 username = {{ identity.username }}
 password = {{ identity.password }}
+{% if ca and ca.bundle -%}
+cafile = {{ snap_common }}/etc/ssl/certs/receive-ca-bundle.pem
+{% endif -%}
 service_token_roles = {{ identity.admin_role }}
 service_token_roles_required = True
 
@@ -92,6 +101,9 @@ user_domain_id = {{ identity.user_domain_id }}
 project_name = {{ identity.project_name }}
 username = {{ identity.username }}
 password = {{ identity.password }}
+{% if ca and ca.bundle -%}
+cafile = {{ snap_common }}/etc/ssl/certs/receive-ca-bundle.pem
+{% endif -%}
 
 [paste_deploy]
 flavor = keystone
@@ -105,6 +117,9 @@ region_name = {{ identity.region_name }}
 project_name = {{ identity.project_name }}
 username = {{ identity.username }}
 password = {{ identity.password }}
+{% if ca and ca.bundle -%}
+cafile = {{ snap_common }}/etc/ssl/certs/receive-ca-bundle.pem
+{% endif -%}
 service_metadata_proxy = True
 metadata_proxy_shared_secret = {{ credentials.ovn_metadata_proxy_shared_secret }}
 
@@ -117,6 +132,9 @@ region_name = {{ identity.region_name }}
 project_name = {{ identity.project_name }}
 username = {{ identity.username }}
 password = {{ identity.password }}
+{% if ca and ca.bundle -%}
+cafile = {{ snap_common }}/etc/ssl/certs/receive-ca-bundle.pem
+{% endif -%}
 
 {% if telemetry.enable -%}
 [oslo_messaging_notifications]
