Add condition on templating rabbitmq, early exit ovn if sb con missing
Add condition on templating rabbitmq since it's unset by default.
Early exit ovn configuration is the SB connection string is missing.

--- a/templates/ceilometer.conf.j2
+++ b/templates/ceilometer.conf.j2
@@ -4,8 +4,10 @@
 [DEFAULT]
 debug = {{ logging.debug }}
 
+{% if rabbitmq is defined %}
 # AMQP connection to RabbitMQ
 transport_url = {{ rabbitmq.url }}
+{% endif %}
 
 [polling]
 batch_size = 50
